eventful API added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>MyPage</title>
-        <link rel="stylesheet" href="default.css"/>
+        <link rel="stylesheet" href="../css/default.css"/>
     </head>
     <body>
      <%= yield %>
