API fully working.

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,19 @@
 <h1>Homepage</h1>
-<ul>
-  <li><%= @newevent[:title] %> </li>
-</ul>
+
+<header>
+  <h1>Running USA</h1>
+  <p>Details about our site</p>
+</header>
+
+<div class="left_col">
+  <h2>Upcoming Events</h2>
+  <% for i in 0..$dates
+</div>
+
+<div class="right_col"></div>
+<% $i = 0 %>
+
+
+
+
+
