--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>MyPage</title>
-        <link rel="stylesheet" href="../css/default.css"/>
+        <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
      <%= yield %>
+     <%= erb :nav %>
     </body>
 </html>
