--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>MyPage</title>
-        <link rel="stylesheet" href="css/styles.css"/>
+        <link rel="stylesheet" href="/styles.css"/>
     </head>
     <body>
-     <%= yield %>
      <%= erb :nav %>
+     <%= yield %>
+
     </body>
 </html>
