--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,3 +1,35 @@
+
+<button>Add Your Race</button>
+
+
+<form action="post">
+  <label for="race_name">Race Name</label>
+  <input type="text">
+  <label for="race_location">Location</label>
+  <input type="text">
+  <label for="race_description">Description</label>
+  <input type="text">
+  <label for="start_date">Date</label>
+  <input type="date">
+</form>
+
+<p>We allow ANYONE to submit a race to our directory. We personally verify EVERY submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:
+
+<strong>Submit Your Race</strong> 
+
+If your race is already on our site, but with an old date or incorrect information, please click on the update icon  next to the listing, and submit an update with the new information. </p>
+
+<p>The best way to contact us is by email at werun@fakeemail.com. 
+
+We really do answer all of our email. Occasionally, something gets caught in a spam filter, or once in a blue moon we get a really obnoxious email that we delete. But if you have a question, comment, or criticism about anything related to our site, we will respond to you, generally within a few hours, at most a day. 
+
+Also - feel free to report any problem you experience on this site so that we can fix it.</p>
+
+
+
+
+
+
 <div>
     <form method="post" action="">
         <label for="contact">Contact Us</label>
