--- a/views/home.erb
+++ b/views/home.erb
@@ -1,20 +1,30 @@
-<h1>Homepage</h1>
 
-<header>
+ <img class="header-photo" src="../images/header-photo.png">
+
+<header class="header-content">
+  <h1>Homepage</h1>
   <h1>Running USA</h1>
   <p>Details about our site</p>
 </header>
 
+
 <div class="left-col">
   <h2>Upcoming Events</h2>
+
+  <div class="event-col">
+    <p><%= $titles[0] %></p>
+    
+  </div>
+
+  <ul>
+    <% $dates.each do |date| %>
+    <li><%= p date %></li>
+    <% end %>
+  </ul>
 </div>
 
-<div class="right-col"></div>
+<div class="right-col">
+  <h2>Feature Stories</h2>
 
-<div class="footer"></div>
-
-
-
-
-
+</div>
 
