--- a/public/styles.css
+++ b/public/styles.css
@@ -1,14 +1,45 @@
-body {
+* {
+  margin: 0;
+  padding: 0; }
+
+.body {
   color: black;
-  background-color: #6E362C; }
+  background-color: #FAEBD8;
+  margin-top: 70px;
+  padding: 20px 50px; }
+
+.header-content {
+  position: absolute;
+  z-index: 3;
+  top: 20%;
+  left: 50%; }
+
+.header-photo {
+  width: 100%;
+  height: 300px; }
+
+.nav {
+  width: 100%;
+  top: 0;
+  background-color: black;
+  padding: 20px 50px;
+  position: fixed;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  font-size: 1.3em; }
 
 .nav li {
-  background-color: white;
   text-decoration: none;
-  display: inline-block; }
+  display: inline-block;
+  padding: 5px; }
 
 .left-col {
-  background-color: #AFA8A0; }
+  background-color: #AFA8A0;
+  position: relative;
+  float: left; }
 
 .right-col {
-  background-color: #F8E3D7; }
+  background-color: #F8E3D7;
+  position: relative;
+  float: left; }
