--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,8 @@
     </head>
     <body>
      <%= erb :nav %>
-     <%= yield %>
+     <div class="body">
+     	<%= yield %>
+ 	</div>
     </body>
 </html>
