--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,17 +1,19 @@
 
 <button>Add Your Race</button>
 
-
-<form action="post">
-  <label for="race_name">Race Name</label>
-  <input type="text">
-  <label for="race_location">Location</label>
-  <input type="text">
-  <label for="race_description">Description</label>
-  <input type="text">
-  <label for="start_date">Date</label>
-  <input type="date">
-</form>
+<div class="modal">
+  <form class="form_modal" action="post">
+    <label for="race_name">Name</label>
+    <input type="text">
+    <label for="race_location">Location</label>
+    <input type="text">
+    <label for="race_description">Description</label>
+    <textarea></textarea>
+    <label for="start_date">Date</label>
+    <input type="date">
+    <input type="submit">
+  </form>
+</div>
 
 <p>We allow ANYONE to submit a race to our directory. We personally verify EVERY submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:
 
