--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,3 +1,19 @@
+.modal {
+  position: absolute;
+  form {
+    width: 500px;
+    height: 500px;
+  }
+  label {
+    display: block;
+    position: relative;
+    font-size: 30px;
+  }
+  input {
+    position: relative;
+
+  }
+}
 
 
 
