--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,6 @@
 
+/* All pages */
+
 * {
   margin: 0;
   padding: 0; }
@@ -8,16 +10,6 @@
   background-color: #FAEBD8;
   margin-top: 70px;
   padding: 20px 50px; }
-
-.header-content {
-  position: absolute;
-  z-index: 3;
-  top: 20%;
-  left: 50%; }
-
-.header-photo {
-  width: 100%;
-  height: 300px; }
 
 .nav {
   width: 100%;
@@ -32,8 +24,21 @@
 
 .nav li {
   text-decoration: none;
+  color: white;
   display: inline-block;
   padding: 5px; }
+
+/* Home page */
+
+.header-content {
+  position: absolute;
+  z-index: 3;
+  top: 20%;
+  left: 50%; }
+
+.header-photo {
+  width: 100%;
+  height: 300px; }
 
 .left-col {
   background-color: #AFA8A0;
