--- a/views/home.erb
+++ b/views/home.erb
@@ -1,10 +1,9 @@
 
- <img class="header-photo" src="../images/header-photo.png">
+ <img class="header-photo" src="../images/running-header.jpg">
 
 <header class="header-content">
-  <h1>Homepage</h1>
-  <h1>Running USA</h1>
-  <p>Details about our site</p>
+  <h1>Marathon Guide | New York</h1>
+  <p>Find a race around your area now.</p>
 </header>
 
 <div class="wrapper">
