--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
     <head>
         <title>MyPage</title>
         <link rel="stylesheet" href="/styles.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
     </head>
     <body>
      <%= erb :nav %>
