--- a/views/nav.erb
+++ b/views/nav.erb
@@ -1,9 +1,9 @@
 
 <nav class="nav">
   <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/contact">Contact</a></li>
-    <li><a href="/images">Images</a></li>
-    <li><a href="/blogs">Blogs</a></li>
+  	|<li><a href="/">Home</a></li>|
+    <li><a href="/images">Images</a></li>|
+    <li><a href="/blogs">Blogs</a></li>|
+    <li><a href="/contact">Contact Us</a></li>|
   </ul>
 </nav>
