contact page updated with modal working and styling.

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,5 +1,4 @@
 
-<button>Add Your Race</button>
 
 <div class="modal">
   <form class="form_modal" action="post">
@@ -11,32 +10,29 @@
       <button id="modal_submit" type="submit">SUBMIT</button>
     </div>
   </form>
+  <div class="video_wrapper">
+      <iframe width="560" height="375" src="https://www.youtube-nocookie.com/embed/wm2hlOFy-3c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
 
-<p>We allow ANYONE to submit a race to our directory. We personally verify EVERY submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:
+<div class="contact_wrapper">
+  <div class="left_contact">
 
-<strong>Submit Your Race</strong> 
+    <h1>Contact</h1>
+  
+    <p>We allow <strong>ANYONE</strong> to submit a race to our directory. We personally verify <strong>EVERY</strong> submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:</p> <button id="race_button">Add Your Race</button> 
 
-If your race is already on our site, but with an old date or incorrect information, please click on the update icon  next to the listing, and submit an update with the new information. </p>
+    <p>The best way to contact us is by email at werun@fakeemail.com.</p> 
 
-<p>The best way to contact us is by email at werun@fakeemail.com. 
+  </div>
 
-We really do answer all of our email. Occasionally, something gets caught in a spam filter, or once in a blue moon we get a really obnoxious email that we delete. But if you have a question, comment, or criticism about anything related to our site, we will respond to you, generally within a few hours, at most a day. 
-
-Also - feel free to report any problem you experience on this site so that we can fix it.</p>
-
-
-
-
-
-
-<div>
+  <div class="right_contact">
     <form method="post" action="">
-        <label for="contact">Contact Us</label>
-        <input placeholder="Name" type="text" name="name">
-        <input placeholder="Email" type="text" name="email">
-        <input placeholder="Subject" type="text" name="subject">
-        <textarea placeholder="Describe your event" id="description" name="comment"></textarea>
-        <input type="submit">
-    </form>
+          <input class="contact_input" placeholder="Name" type="text" name="name">
+          <input class="contact_input" placeholder="Email" type="text" name="email">
+          <input class="contact_input" placeholder="Subject" type="text" name="subject">
+          <textarea placeholder="Describe your event" id="description" name="comment"></textarea>
+          <input type="submit">
+      </form>
+  </div>
 </div>
