--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,11 +5,10 @@
         <link rel="stylesheet" href="/styles.css"/>
         <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
     </head>
-    <body>
+    <body class="<%= @class %>">
      <%= erb :nav %>
-     <div class="body">
      	<%= yield %>
- 	</div>
  	<%= erb :footer %>
+    <script src="/main.js"></script>
     </body>
 </html>
