--- a/public/styles.scss
+++ b/public/styles.scss
@@ -194,6 +194,7 @@ $sans-serif-font: 'Mukta', sans-serif;
 }
 
 .contact_wrapper{
+  background-image: url("/images/contact_background.jpg");
   vertical-align: top;
   width: 1440px;
   margin: 0 auto;
