--- a/views/contact.erb
+++ b/views/contact.erb
@@ -17,13 +17,13 @@
 
 <div class="contact_wrapper">
   <div class="left_contact">
+    <div class="left_inner_content">
+      <h1>Contact</h1>
+    
+      <p>We allow <strong>ANYONE</strong> to submit a race to our directory. We personally verify <strong>EVERY</strong> submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:</p> <button id="race_button">Add Your Race</button> 
 
-    <h1>Contact</h1>
-  
-    <p>We allow <strong>ANYONE</strong> to submit a race to our directory. We personally verify <strong>EVERY</strong> submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:</p> <button id="race_button">Add Your Race</button> 
-
-    <p>The best way to contact us is by email at werun@fakeemail.com.</p> 
-
+      <p>The best way to contact us is by email at werun@fakeemail.com.</p> 
+    </div>  
   </div>
 
   <div class="right_contact">
