--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0; }
@@ -32,7 +31,7 @@
   .nav a:hover {
     background-color: white; }
 
-footer {
+.home footer {
   clear: both;
   background-color: #2B0E02;
   height: 300px; }
@@ -174,16 +173,19 @@ table {
 
 .contact_wrapper {
   background-image: url("/images/contact_background.jpg");
+  background-size: cover;
   vertical-align: top;
   width: 1440px;
-  margin: 0 auto;
+  height: 800px;
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: #FEF7DD;
-  font-family: "Mukta", sans-serif;
-  margin-top: 200px; }
+  font-family: "Mukta", sans-serif; }
   .contact_wrapper .left_contact {
     position: relative;
-    left: 100px;
-    width: 400px; }
+    height: 700px;
+    width: 600px; }
   .contact_wrapper .right_contact {
     background-color: rgba(0, 0, 0, 0.3);
     position: absolute;
