--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
 
-=======
->>>>>>> 33dd83617d24067e424efbb17df9d36c4358d9db
 
 $blue: #E5F4FD;
 $orange: #CFA50E;
@@ -10,14 +7,14 @@ $dark-brown: #2B0E02;
 $green: #2B2006;
 $sans-serif-font: 'Mukta', sans-serif;
 
-//----------ALL PAGES---------//
+// All pages
 
 * {
   margin: 0;
   padding: 0; 
 }
 
-.home {
+.body {
   color: black;
   background-color: $green;
   font-family: $sans-serif-font;
@@ -59,7 +56,7 @@ footer {
 	height: 300px;
 }
 
-//---------HOMEPAGE------------//
+// Home page
 
 .header-content {
 	position: absolute;
@@ -138,11 +135,6 @@ table {
 		width: 300px;
 		height: 220px;
 	}
-}
-
-.footer {
-	clear: both;
-	padding: 0 20px;
 }
 
 //--------CONTACTPAGE---------//
