contact page css updated

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -16,23 +16,25 @@
 </div>
 
 <div class="contact_wrapper">
-  <div class="left_contact">
-    <div class="left_inner_content">
-      <h1>Contact</h1>
-    
-      <p>We allow <strong>ANYONE</strong> to submit a race to our directory. We personally verify <strong>EVERY</strong> submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:</p> <button id="race_button">Add Your Race</button> 
+  <div class="contact_color">
+    <div class="left_contact">
+      <div class="left_inner_content">
+        <h1>Contact</h1>
+      
+        <p>We allow <strong>ANYONE</strong> to submit a race to our directory. We personally verify <strong>EVERY</strong> submittal before it is public on our site. To add your event, or an event that you know about that we don't already have:</p> <button id="race_button">Add Your Race</button> 
 
-      <p>The best way to contact us is by email at werun@fakeemail.com.</p> 
-    </div>  
-  </div>
+        <p>The best way to contact us is by email at werun@fakeemail.com.</p> 
+      </div>  
+    </div>
 
-  <div class="right_contact">
-    <form method="post" action="">
-          <input class="contact_input" placeholder="Name" type="text" name="name">
-          <input class="contact_input" placeholder="Email" type="text" name="email">
-          <input class="contact_input" placeholder="Subject" type="text" name="subject">
-          <textarea placeholder="Describe your event" id="description" name="comment"></textarea>
-          <input type="submit">
-      </form>
+    <div class="right_contact">
+      <form method="post" action="">
+            <input class="contact_input" placeholder="Name" type="text" name="name">
+            <input class="contact_input" placeholder="Email" type="text" name="email">
+            <input class="contact_input" placeholder="Subject" type="text" name="subject">
+            <textarea placeholder="Describe your event" id="description" name="comment"></textarea>
+            <input type="submit">
+        </form>
+    </div>
   </div>
 </div>
