--- a/public/styles.css
+++ b/public/styles.css
@@ -184,16 +184,29 @@ table {
   font-family: "Mukta", sans-serif; }
   .contact_wrapper .left_contact {
     position: relative;
-    height: 700px;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 800px;
     width: 600px; }
+    .contact_wrapper .left_contact .left_inner_content {
+      width: 400px;
+      position: relative;
+      top: 30%;
+      left: 15%;
+      color: white; }
   .contact_wrapper .right_contact {
-    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
     position: absolute;
+    width: 600px;
     left: 700px;
-    top: 170px; }
+    top: 260px; }
     .contact_wrapper .right_contact .contact_input {
       display: block;
       margin-top: 50px;
+      margin-left: auto;
+      margin-right: auto;
       outline: none;
-      font-size: 40px;
-      border: 0; }
+      font-size: 30px;
+      border: 0;
+      position: relative;
+      border-bottom: 1px solid black;
+      background-color: transparent; }
