--- a/public/styles.scss
+++ b/public/styles.scss
@@ -243,21 +243,43 @@ table {
   font-family: $sans-serif-font;
   .left_contact {
     position: relative;
-    height: 700px;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 800px;
     width: 600px;
+    .left_inner_content{
+      width: 400px;
+      position: relative;
+      top: 30%;
+      left: 15%;
+      color: white;
+    }
   }
   .right_contact {
-    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
     position: absolute;
+    width: 600px;
     left: 700px;
-    top: 170px;
+    top: 260px;
     
     .contact_input {
       display: block;
       margin-top: 50px;
+      margin-left: auto;
+      margin-right: auto;
       outline: none;
-      font-size: 40px;
+      font-size: 30px;
       border: 0;
+      position: relative;
+      border-bottom: 1px solid black;
+      background-color: transparent;
+    // font-size: 28px;
+    // border: 0;
+    // border-bottom: 1px solid black;
+    // background-color: transparent;
+    // width: 330px;
+    // margin-top: 30px;
+    // outline: none;
+    // font-family: $sans-serif-font;
     }
   }
 }
