contact page finished. Runners page started

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -16,7 +16,6 @@
 </div>
 
 <div class="contact_wrapper">
-  <div class="contact_color">
     <div class="left_contact">
       <div class="left_inner_content">
         <h1>Contact</h1>
@@ -32,9 +31,7 @@
             <input class="contact_input" placeholder="Name" type="text" name="name">
             <input class="contact_input" placeholder="Email" type="text" name="email">
             <input class="contact_input" placeholder="Subject" type="text" name="subject">
-            <textarea placeholder="Describe your event" id="description" name="comment"></textarea>
-            <input type="submit">
+            <button id="contact_submit" type="submit">SEND</button>
         </form>
     </div>
-  </div>
 </div>
