--- a/views/nav.erb
+++ b/views/nav.erb
@@ -2,7 +2,7 @@
 <nav class="nav">
   <ul>
   	|<li><a href="/">Home</a></li>|
-    <li><a href="/images">Images</a></li>|
+    <li><a href="/runners">Runners</a></li>|
     <li><a href="/blogs">Blogs</a></li>|
     <li><a href="/contact">Contact Us</a></li>|
   </ul>
