--- a/public/styles.scss
+++ b/public/styles.scss
@@ -22,7 +22,7 @@ $sans-serif-font: 'Mukta', sans-serif;
 }
 
 .nav {
-	width: 100%;
+	width: 1240px;
 	top: 0;
 	background-color: $orange;
 	padding: 20px 50px;
@@ -34,19 +34,25 @@ $sans-serif-font: 'Mukta', sans-serif;
 	z-index: 3;
 	font-family: $sans-serif-font;
 
-	li {
-		display: inline-block;
-	}
+  ul{
 
-	a{
-		padding: 5px 35px;
-		color: $dark-brown;
-		font-weight: bold;
-		text-decoration: none;
-	}
-	a:hover {
-		background-color: white;
-	}
+    width: 800px;
+    margin: 0 auto;
+
+  	li {
+  		display: inline-block;
+  	}
+
+  	a{
+  		padding: 5px 35px;
+  		color: $dark-brown;
+  		font-weight: bold;
+  		text-decoration: none;
+  	}
+  	a:hover {
+  		background-color: white;
+  	}
+  }
 }
 
 .home footer {
@@ -80,7 +86,7 @@ $sans-serif-font: 'Mukta', sans-serif;
 .wrapper {
 	padding: 30px;
 	padding-bottom: 70px;
-	width: 95%;
+	width: 1280px;
 	height: 800px;
 	background-color: $blue;
 	h2 {
@@ -143,8 +149,15 @@ table {
 
 //--------CONTACTPAGE---------//
 
-.ease_in {
-  transition: all 600ms cubic-bezier(0.39, 0.575, 0.565, 1);
+.modal.ease_in {
+  transform: translateY(0);
+  transition-timing-function: ease-in;
+  transition: 0.2s;
+ 
+}
+
+.ease_out {
+
 }
 
 .contact {
@@ -154,10 +167,11 @@ table {
 
 .modal {
   z-index: 1;
-  display: none;
+  transform: translateY(-140%);
   position: absolute;
   left:0;
   right:0;
+  margin-top: 130px;
   margin-left:auto;
   margin-right:auto;
   width: 990px;
@@ -220,7 +234,7 @@ table {
 
     iframe {
       position: relative;
-      left: 380px;
+      left: 390px;
       bottom: 515px;
       width: 600px;
       height: 514px;
@@ -252,14 +266,32 @@ table {
       top: 30%;
       left: 15%;
       color: white;
+        h1 {
+          font-size: 60px;
+        }
+    #race_button{
+      border: none;
+      outline: none;
+      background: transparent;
+      margin: 30px;
+      font-size: 20px;
+      color: white;
+      transition: all .3s ease-in-out;
+      color: $peach;
+      }
+    #race_button:hover{
+      transform: scale(1.2);
+      }  
     }
-  }
+    }
   .right_contact {
-    color: white;
     position: absolute;
-    width: 600px;
+    width: 650px;
+    height: 450px;
     left: 700px;
     top: 260px;
+    background-color: rgba(43, 14, 2, 0.6);
+    border-radius: 10px;
     
     .contact_input {
       display: block;
@@ -267,19 +299,66 @@ table {
       margin-left: auto;
       margin-right: auto;
       outline: none;
-      font-size: 30px;
+      font-size: 50px;
       border: 0;
       position: relative;
       border-bottom: 1px solid black;
       background-color: transparent;
-    // font-size: 28px;
-    // border: 0;
-    // border-bottom: 1px solid black;
-    // background-color: transparent;
-    // width: 330px;
-    // margin-top: 30px;
-    // outline: none;
-    // font-family: $sans-serif-font;
+      color: $peach;
+    }
+
+    input::placeholder {
+      color: $peach;
+    }
+
+    #contact_submit {
+      margin-top: 40px;
+      margin-left: 485px;
+      background-color: $dark-brown;
+      color: white;
+      border: 0;
+      font-size: 20px;
+      outline: 0;
+      border-style: none;
+      border-radius: 10px;
+      padding-left: 15px;
+      padding-right: 10px;
+      letter-spacing: .2em;
+    }
+  }
+}
+
+//-------OURRUNNERS---------//
+
+
+.runner_wrapper{
+  margin-top: 200px;
+  position: absolute;
+
+  .athlete_info{
+    width: 300px;
+    position: relative;
+    left: 100px;
+  }
+
+  .athletes{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 950px;
+    left: 450px;
+    bottom: 200px;
+
+    .row{
+      width: 280px;
+      flex: 1;
+      margin-top: 10px;
+      img {
+        width: 250px;
+        height: 250px;
+      }
     }
   }
 }
