--- a/public/styles.css
+++ b/public/styles.css
@@ -1,20 +1,23 @@
-
 * {
   margin: 0;
   padding: 0; }
 
-.body {
+.home {
   color: black;
   background-color: #2B2006;
-  font-family: "Mukta", sans-serif;
-  margin-top: 70px;
-  padding: 20px 50px; }
+  font-family: "Mukta", sans-serif; }
+  .home a {
+    color: #2B0E02; }
+  .home a:hover {
+    color: #CFA50E; }
 
 .nav {
-  width: 1240px;
+  width: 1440px;
+  padding-left: 0;
+  margin-left: 0;
   top: 0;
   background-color: #CFA50E;
-  padding: 20px 50px;
+  padding: 20px;
   position: fixed;
   text-transform: uppercase;
   text-decoration: none;
@@ -23,22 +26,53 @@
   z-index: 3;
   font-family: "Mukta", sans-serif; }
   .nav ul {
-    width: 800px;
+    width: 900px;
     margin: 0 auto; }
     .nav ul li {
-      display: inline-block; }
+      display: inline-block;
+      font-weight: bold; }
     .nav ul a {
       padding: 5px 35px;
       color: #2B0E02;
       font-weight: bold;
       text-decoration: none; }
+    .nav ul a {
+      color: #2B0E02; }
     .nav ul a:hover {
+      color: #CFA50E;
       background-color: white; }
 
-.home footer {
+.footer {
   clear: both;
   background-color: #2B0E02;
-  height: 300px; }
+  height: 300px;
+  text-align: center;
+  padding: 50px; }
+  .footer form {
+    background-color: rgba(207, 165, 14, 0.5);
+    padding: 80px; }
+  .footer label {
+    font-weight: bold;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: black;
+    padding: 10px; }
+  .footer input[name="email"] {
+    padding: 10px;
+    width: 400px;
+    font-size: 1.3em;
+    border-radius: 10px; }
+  .footer button {
+    padding: 10px;
+    width: 150px;
+    height: 50px;
+    font-size: 1.3em;
+    border-radius: 10px;
+    background-color: #2B0E02;
+    color: white;
+    text-transform: uppercase; }
+  .footer button:hover {
+    background-color: #CFA50E; }
 
 .header-content {
   position: absolute;
@@ -52,14 +86,19 @@
     padding-left: 110px; }
 
 .header-photo {
-  width: 100%;
-  height: 400px; }
+  padding-left: 35px;
+  margin-top: 85px;
+  width: 1340px;
+  height: 450px;
+  text-align: center; }
 
 .wrapper {
-  padding: 30px;
-  padding-bottom: 70px;
+  margin: 0 auto;
   width: 1280px;
   height: 800px;
+  padding: 30px;
+  padding-bottom: 80px;
+  margin-bottom: 20px;
   background-color: #E5F4FD; }
   .wrapper h2 {
     padding-left: 10px;
@@ -73,11 +112,12 @@
     background-color: #2B0E02;
     color: white;
     width: 130px;
-    font-size: 1.4em;
+    font-size: 1.1em;
     text-align: center; }
 
 .left-col {
   width: 40%;
+  height: 800px;
   margin-right: 25px;
   position: relative;
   background-color: white;
@@ -89,6 +129,7 @@
 
 .right-col {
   width: 51.3%;
+  height: 800px;
   background-color: #FEF7DD;
   position: relative;
   float: left;
@@ -103,23 +144,64 @@ table {
     width: 300px;
     height: 220px; }
 
-.footer {
-  clear: both;
-  padding: 0 20px; }
-
-#map {
-  position: fixed;
-  top: 80px;
-  height: 500px;
-  width: 90%; }
-
 .modal.ease_in {
   transform: translateY(0);
   transition-timing-function: ease-in;
   transition: 0.2s; }
 
-.ease_in {
-  transition: all 600ms cubic-bezier(0.39, 0.575, 0.565, 1); }
+#map {
+  position: fixed;
+  top: 85px;
+  left: 35px;
+  right: 35px;
+  height: 440px;
+  width: 95%; }
+
+.map-content {
+  background-color: #E5F4FD;
+  margin: 0 auto;
+  margin-top: 90px;
+  width: 1300px;
+  height: 1550px;
+  padding: 30px;
+  padding-bottom: 80px;
+  margin-bottom: 20px; }
+
+.map {
+  background-color: #2B2006; }
+  .map h1 {
+    margin: 20px;
+    font-family: "Mukta", sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold; }
+
+.race-info {
+  font-family: "Mukta", sans-serif;
+  margin: auto auto;
+  background-color: black; }
+  .race-info th {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 1.3em;
+    background-color: #2B0E02;
+    color: white;
+    padding: 8px; }
+  .race-info td {
+    background-color: white;
+    padding: 8px; }
+  .race-info a {
+    color: #2B0E02; }
+  .race-info a:hover {
+    color: #CFA50E; }
+  .race-info .event_description {
+    width: 500px;
+    height: 120px;
+    overflow: scroll; }
+  .race-info .event_time {
+    width: 100px; }
+  .race-info .event_title {
+    width: 200px; }
 
 .contact {
   background-color: #FEF7DD; }
