--- a/public/styles.scss
+++ b/public/styles.scss
@@ -14,133 +14,183 @@ $sans-serif-font: 'Mukta', sans-serif;
   padding: 0; 
 }
 
-.body {
+.home {
   color: black;
   background-color: $green;
   font-family: $sans-serif-font;
-  margin-top: 70px;
-  padding: 20px 50px;
-}
-
-.nav {
-	width: 1240px;
-	top: 0;
-	background-color: $orange;
-	padding: 20px 50px;
-	position: fixed;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: white;
-	font-size: 1.5em;
-	z-index: 3;
-	font-family: $sans-serif-font;
-
-  ul{
-
-    width: 800px;
-    margin: 0 auto;
-
-  	li {
-  		display: inline-block;
-  	}
-
-  	a{
-  		padding: 5px 35px;
-  		color: $dark-brown;
-  		font-weight: bold;
-  		text-decoration: none;
-  	}
-  	a:hover {
-  		background-color: white;
-  	}
+  a {
+    color: $dark-brown;
+  }
+  a:hover {
+    color: $orange;
   }
 }
 
-.home footer {
-	clear: both;
-	background-color: $dark-brown;
-	height: 300px;
+.nav {
+  width: 1440px;
+  padding-left: 0;
+  margin-left: 0;
+  top: 0;
+  background-color: $orange;
+  padding: 20px;
+  position: fixed;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  font-size: 1.5em;
+  z-index: 3;
+  font-family: $sans-serif-font;
+
+  ul{
+
+    width: 900px;
+    margin: 0 auto;
+
+    li {
+      display: inline-block;
+      font-weight: bold;
+    }
+
+    a{
+      padding: 5px 35px;
+      color: $dark-brown;
+      font-weight: bold;
+      text-decoration: none;
+    }
+  a {
+    color: $dark-brown;
+  }
+  a:hover {
+    color: $orange;
+    background-color: white;
+  }
+  }
+}
+
+.footer {
+  clear: both;
+  background-color: $dark-brown;
+  height: 300px;
+  text-align: center;
+  padding: 50px;
+  form {
+    background-color: rgba(207,165,14,0.5);
+    padding: 80px;
+  }
+  label {
+    font-weight: bold;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: black;
+    padding: 10px;
+  }
+  input[name="email"] {
+    padding: 10px;
+    width: 400px;
+    font-size: 1.3em;
+    border-radius: 10px;
+  }
+  button {
+    padding: 10px;
+    width: 150px;
+    height: 50px;
+    font-size: 1.3em;
+    border-radius: 10px;
+    background-color: $dark-brown;
+    color: white;
+    text-transform: uppercase;
+  }
+  button:hover {
+    background-color: $orange;
+  }
 }
 
 // Home page
 
 .header-content {
-	position: absolute;
-	top: 18%;
-	left: 16%;
+  position: absolute;
+  top: 18%;
+  left: 16%;
 
-	h1 {
-		text-transform: uppercase;
-	}
-	p {
-		margin-top: -10px;
-		font-size: 1.5em;
-		padding-left: 110px;
-	}
+  h1 {
+    text-transform: uppercase;
+  }
+  p {
+    margin-top: -10px;
+    font-size: 1.5em;
+    padding-left: 110px;
+  }
 }
 
 .header-photo {
-	width: 100%;
-	height: 400px;
+  padding-left: 35px;
+  margin-top: 85px;
+  width: 1340px;
+  height: 450px;
+  text-align: center;
 }
 
 .wrapper {
-	padding: 30px;
-	padding-bottom: 70px;
-	width: 1280px;
-	height: 800px;
-	background-color: $blue;
-	h2 {
-		padding-left: 10px;
-		padding-bottom: 10px;
-		text-transform: uppercase;
-	}
-	td {
-		padding: 5px;
-	}
-	tr.event_title {
-		padding-bottom: 5px;
-	}
-	td.event_time {
-		background-color: $dark-brown;
-		color: white;
-		width: 130px;
-		font-size: 1.4em;
-		text-align: center;
-	}
+  margin: 0 auto;
+  width: 1280px;
+  height: 800px;
+  padding: 30px;
+  padding-bottom: 80px;
+  margin-bottom: 20px;
+  background-color: $blue;
+  h2 {
+    padding-left: 10px;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+  }
+  td {
+    padding: 5px;
+  }
+  tr.event_title {
+    padding-bottom: 5px;
+  }
+  td.event_time {
+    background-color: $dark-brown;
+    color: white;
+    width: 130px;
+    font-size: 1.1em;
+    text-align: center;
+  }
 }
 
 .left-col {
-	width: 40%;
-	margin-right: 25px;
-	position: relative;
-	background-color: white;
-	float: left;
-	padding: 20px 20px; 
-	li {
-		list-style-type: none;
-	}
-	margin-bottom: 20px;
+  width: 40%;
+  height: 800px;
+  margin-right: 25px;
+  position: relative;
+  background-color: white;
+  float: left;
+  padding: 20px 20px; 
+  li {
+    list-style-type: none;
+  }
+  margin-bottom: 20px;
 }
 
 .right-col {
-	width: 51.3%;
-	background-color: $peach;
-	position: relative;
-	float: left;
-	padding: 20px 20px;
+  width: 51.3%;
+  height: 800px;
+  background-color: $peach;
+  position: relative;
+  float: left;
+  padding: 20px 20px;
 }
 
 table {
-	padding: 0 10px;
-	h4 {
-		font-size: 1.3em;
-	}
-	img {
-		float: left;
-		width: 300px;
-		height: 220px;
-	}
+  padding: 0 10px;
+  h4 {
+    font-size: 1.3em;
+  }
+  img {
+    float: left;
+    width: 300px;
+    height: 220px;
+  }
 }
 
 //--------CONTACTPAGE---------//
@@ -156,10 +206,71 @@ table {
 
  #map {
   position: fixed;
-  top: 80px;
-  height: 500px;
-  width: 90%;
+  top: 85px;
+  left: 35px;
+  right: 35px;
+  height: 440px;
+  width: 95%;
  }
+
+.map-content {
+  background-color: $blue;
+  margin: 0 auto;
+    margin-top: 90px;
+  width: 1300px;
+  height: 1550px;
+  padding: 30px;
+  padding-bottom: 80px;
+  margin-bottom: 20px;
+}
+
+.map {
+  background-color: $green;
+  h1 {
+    margin: 20px;
+    font-family: $sans-serif-font;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+  }
+}
+
+.race-info {
+      font-family: $sans-serif-font;
+      margin: auto auto;
+      background-color: black;
+  th {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 1.3em;
+    background-color: $dark-brown;
+    color: white;
+    padding: 8px;
+  }
+
+  td {
+    background-color: white;
+    padding: 8px;
+  }
+  a {
+    color: $dark-brown;
+  }
+  a:hover {
+    color: $orange;
+  }
+  .event_description {
+    width: 500px;
+    height: 120px;
+    overflow: scroll;
+  }
+
+  .event_time {
+    width: 100px;
+  }
+  .event_title {
+    width: 200px;
+  }
+}
 
 //--------CONTACTPAGE---------//
 
