--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,3 +1,8 @@
-<footer>
 
+<footer class="footer">
+	<form>
+		<label>Subscribe to our newsletter</label><br>
+		<input name="email" type="text" placeholder="Enter your email...">
+		<button name="submit" type="submit">Submit</button>
+	</form>
 </footer>
