--- a/views/nav.erb
+++ b/views/nav.erb
@@ -2,9 +2,8 @@
 <nav class="nav">
   <ul>
   	|<li><a href="/">Home</a></li>|
-    <li><a href="/images">Images</a></li>|
-    <li><a href="/map">Map</a></li>|
-    <li><a href="/runners">Runners</a></li>|
+    <li><a href="/map">Upcoming Races</a></li>|
+    <li><a href="/runners">Our Athletes</a></li>|
     <li><a href="/contact">Contact Us</a></li>|
   </ul>
 </nav>
