--- a/views/runners.erb
+++ b/views/runners.erb
@@ -1,44 +1,71 @@
 <div class="runner_wrapper">
-  <div class="athlete_info">
-    <h1>Our <br> Athletes</h1>
-    <p>To become a sponsored athlete you need to
-    be able to run 1021381 miles in under 3121 minutes and To become a sponsored athlete you need to be able to run 1021381 miles in under 3121 minutes and To become a sponsored athlete you need to be able to run 1021381 miles in under 3121 minutes and </p>
-  </div>
-  <div class="athletes">
-    <div class="row">
-      <img src="./images/athlete_1.jpg" alt="">
-      <p>Name</p>
-      <p>Sport</p>
-    </div>
+ <div class="athlete_info_wrapper">
+   <div class="athlete_info">
+     <h1>Our Athletes</h1>
+     <p>To become a sponsored athlete you need to
+     be able to run 1021381 miles in under 3121 minutes and To become a sponsored athlete you need to be able to run 1021381 miles in under 3121 minutes and To become a sponsored athlete you need to be able to run 1021381 miles in under 3121 minutes and </p>
+   </div>
+ </div>
+ <div class="athletes">
+   <div class="row">
+     <img src="./images/athlete_1.jpg" alt="">
+     <div class="at_data_container">
+       <div class="at_data">
+         <p>Mindy Lee</p>
+         <p>Track &amp; Field</p>
+       </div>
+     </div>
+   </div>
 
-    <div class="row">
-      <img src="./images/athlete_2.jpg" alt="">
-      <p>Name</p>
-      <p>Sport</p>
-    </div>
+   <div class="row">
+     <img src="./images/athlete_2.jpg" alt="">
+     <div class="at_data_container">
+       <div class="at_data">
+         <p>Irhmad Sanjeeb</p>
+         <p>Cross Country</p>
+       </div>
+     </div>
+   </div>
 
-    <div class="row">
-      <img src="./images/athlete_3.jpg" alt="">
-      <p>Name</p>
-      <p>Sport</p>
-    </div>
+   <div class="row">
+     <img src="./images/athlete_3.jpg" alt="">
+     <div class="at_data_container">
+       <div class="at_data">
+         <p>Sandra Beckham</p>
+         <p>Cross Country</p>
+       </div>
+     </div>
+   </div>
 
-    <div class="row">
-      <img src="./images/athlete_1.jpg" alt="">
-      <p>Name</p>
-      <p>Sport</p>
-    </div>
+   <div class="row">
+     <img src="./images/athlete_4.png" alt="">
+     <div class="at_data_container">
+       <div class="at_data">
+         <p>Cam Crews</p>
+         <p>Paper Towel Thrower</p>
+       </div>
+     </div>
+   </div>
 
-    <div class="row">
-      <img src="./images/athlete_1.jpg" alt="">
-      <p>Name</p>
-      <p>Sport</p>
-    </div>
+   <div class="row">
+     <img src="./images/athlete_5.jpg" alt="">
+     <div class="at_data_container">
+       <div class="at_data">
+         <p>Courtney Fells</p>
+         <p>Sprinter</p>
+       </div>
+     </div>
+   </div>
 
-    <div class="row">
-      <img src="./images/athlete_1.jpg" alt="">
-      <p>Name</p>
-      <p>Sport</p>
-    </div>
-  </div>
+   <div class="row">
+     <img src="./images/athlete_4.jpg" alt="">
+     <div class="at_data_container">
+       <div class="at_data">
+         <p>Steve Cook</p>
+         <p>Track &amp; Field</p>
+       </div>
+     </div>
+   </div>
+ </div>
 </div>
+<div class="runners-block"></div>
