--- a/public/styles.scss
+++ b/public/styles.scss
@@ -105,6 +105,7 @@ $sans-serif-font: 'Mukta', sans-serif;
   }
 }
 
+
 // Home page
 
 .header-content {
@@ -444,35 +445,76 @@ table {
 
 //-------OURRUNNERS---------//
 
+.runners-block {
+  height: 830px;
+  width: 100%;
+}
+.runners {
+ height: 800px;
+ background-color: $peach;
+}
 
 .runner_wrapper{
-  margin-top: 200px;
-  position: absolute;
+ margin-top: 80px;
+ width: 1440px;
+ position: absolute;
+ height: 600px;
 
-  .athlete_info{
-    width: 300px;
-    position: relative;
-    left: 100px;
-  }
+ .athlete_info_wrapper{
+   position: relative;
+   background-color: rgba(0, 0, 0, 0.8);
+   height: 750px;
+   width: 500px;
+   .athlete_info{
+     width: 400px;
+     position: relative;
+     top: 30%;
+     left: 13%;
+     color: white;
+     font-family: $sans-serif-font;
+     h1 {
+       font-size: 60px;
+       padding: 20px;
+     }
+     p {
+       padding: 20px;
+       border-bottom: 3px solid white;
+     }
+   }
+ }
 
-  .athletes{
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 950px;
-    left: 450px;
-    bottom: 200px;
+ .athletes{
+   position: relative;
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
+   justify-content: space-evenly;
+   width: 900px;
+   left: 550px;
+   bottom: 700px;
 
-    .row{
-      width: 280px;
-      flex: 1;
-      margin-top: 10px;
-      img {
-        width: 250px;
-        height: 250px;
-      }
-    }
-  }
+   .row{
+     width: 280px;
+     flex: 1;
+     margin-top: 10px;
+     img {
+       width: 275px;
+       height: 300px;
+     }
+     .at_data_container {
+       position: relative;
+       bottom: 53px;
+       width: 275px;
+       height: 50px;
+       overflow: hidden;
+       color: white;
+       background-color: rgba(0, 0, 0, 0.6);
+       .at_data {
+         position: relative;
+         top: 8px;
+         left: 10px;
+       }
+     }
+   }
+ }
 }
