--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,3 +1,5 @@
+
+
 $blue: #E5F4FD;
 $orange: #CFA50E;
 $peach: #FEF7DD;
@@ -40,21 +42,20 @@ $sans-serif-font: 'Mukta', sans-serif;
   font-family: $sans-serif-font;
 
   ul{
-    width: 1200px;
+
+    width: 900px;
     margin: 0 auto;
+
     li {
       display: inline-block;
       font-weight: bold;
     }
-  }
-}
 
-
-.home footer {
-  clear: both;
-  background-color: $dark-brown;
-  height: 300px;
-  text-decoration: none;
+    a{
+      padding: 5px 35px;
+      color: $dark-brown;
+      font-weight: bold;
+      text-decoration: none;
     }
   a {
     color: $dark-brown;
@@ -123,19 +124,6 @@ $sans-serif-font: 'Mukta', sans-serif;
 }
 
 .header-photo {
-<<<<<<< HEAD
-<<<<<<< HEAD
-  width: 100%;
-  height: 400px;
-  margin-top: 80px;
-}
-
-.wrapper {
-  padding: 30px;
-  padding-bottom: 70px;
-  width: 1280px;
-  height: 800px;
-  margin: 0 auto;
   padding-left: 35px;
   margin-top: 85px;
   width: 1340px;
@@ -206,6 +194,14 @@ table {
   }
 }
 
+//--------CONTACTPAGE---------//
+
+.modal.ease_in {
+  transform: translateY(0);
+  transition-timing-function: ease-in;
+  transition: 0.2s;
+ 
+}
 
 // Map page
 
@@ -278,12 +274,6 @@ table {
 }
 
 //--------CONTACTPAGE---------//
-
-.modal.ease_in {
-  transform: translateY(0);
-  transition-timing-function: ease-in;
-  transition: 0.2s; 
-}
 
 .contact {
   background-color: $peach;
